fix(sider-menu): correct color on header in side menu dark mode (#978)

--- a/tegel/src/components/header/header-vars.scss
+++ b/tegel/src/components/header/header-vars.scss
@@ -102,8 +102,8 @@
 .sdds-mode-dark {
   --sdds-header-background: var(--sdds-blue-900);
   --sdds-header-mob-menu-open-color: var(--sdds-white);
-  --sdds-header-mob-menu-open-background: var(--sdds-blue-800);
-  --sdds-header-mob-menu-open-border: var(--sdds-blue-700);
+  --sdds-header-mob-menu-open-background: var(--sdds-grey-958);
+  --sdds-header-mob-menu-open-border: var(--sdds-grey-868);
   --sdds-nav-item-background: var(--sdds-grey-800);
   --sdds-nav-item-background-hover: var(--sdds-grey-700);
   --sdds-nav-item-background-active: var(--sdds-grey-700);
